tests/ui/feature-gates/feature-gate-naked_functions.stderr
error[E0658]: use of unstable library feature 'naked_functions'
  --> $DIR/feature-gate-naked_functions.rs:9:5
   |
LL |     naked_asm!("")
   |     ^^^^^^^^^
   |
   = note: see issue #90957 <https://github.com/rust-lang/rust/issues/90957> for more information
   = help: add `#![feature(naked_functions)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature 'naked_functions'
  --> $DIR/feature-gate-naked_functions.rs:17:5
   |
LL |     naked_asm!("")
   |     ^^^^^^^^^
   |
   = note: see issue #90957 <https://github.com/rust-lang/rust/issues/90957> for more information
   = help: add `#![feature(naked_functions)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the `#[naked]` attribute is an experimental feature
  --> $DIR/feature-gate-naked_functions.rs:6:1
   |
LL | #[naked]
   | ^^^^^^^^
   |
   = note: see issue #90957 <https://github.com/rust-lang/rust/issues/90957> for more information
   = help: add `#![feature(naked_functions)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the `#[naked]` attribute is an experimental feature
  --> $DIR/feature-gate-naked_functions.rs:14:1
   |
LL | #[naked]
   | ^^^^^^^^
   |
   = note: see issue #90957 <https://github.com/rust-lang/rust/issues/90957> for more information
   = help: add `#![feature(naked_functions)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature 'naked_functions'
  --> $DIR/feature-gate-naked_functions.rs:3:5
   |
LL | use std::arch::naked_asm;
   |     ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #90957 <https://github.com/rust-lang/rust/issues/90957> for more information
   = help: add `#![feature(naked_functions)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0133]: use of inline assembly is unsafe and requires unsafe function or block
  --> $DIR/feature-gate-naked_functions.rs:9:5
   |
LL |     naked_asm!("")
   |     ^^^^^^^^^^^^^^ use of inline assembly
   |
   = note: inline assembly is entirely unchecked and can cause undefined behavior

error[E0133]: use of inline assembly is unsafe and requires unsafe function or block
  --> $DIR/feature-gate-naked_functions.rs:17:5
   |
LL |     naked_asm!("")
   |     ^^^^^^^^^^^^^^ use of inline assembly
   |
   = note: inline assembly is entirely unchecked and can cause undefined behavior

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0133, E0658.
For more information about an error, try `rustc --explain E0133`.
